--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@
 header {
     width: 100%;
     height: 30px;
+}
+
+header div {
+    display: inline;
     display: flex;
-    
+    justify-content: space-between;
 }
