--- a/assets/style.css
+++ b/assets/style.css
@@ -1,12 +1,53 @@
-* {
-    margin: 10;
-    padding: 0;
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
 header {
     width: 100%;
     height: 30px;
-    display: inline;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid blue
+}
+
+main {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+}
+
+#container{
+padding-bottom: 50px;
+width: 800px;
+max-width: 80%;
+border: 2px;
+border-style: solid;
+border-radius: 5px;
+box-shadow: 0 0 10px 2px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+button {
+    background-color: rgb(117, 117, 244);
+    box-shadow: 10px;
+    border-radius: 90px;
+    color: white;
+    padding: 5px;
+}
+
+#answers {
+    width: 200px;
+    padding: 10px;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+#start {
+    padding: 10px;
+    font-size: 20px;
 }
