--- a/assets/quiz.css
+++ b/assets/quiz.css
@@ -37,6 +37,11 @@ flex-direction: column;
 align-items: center;
 }
 
+#question-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 button {
     background-color: rgb(117, 117, 244);
     box-shadow: 10px;
