--- a/assets/score.css
+++ b/assets/score.css
@@ -24,16 +24,6 @@ main {
     align-items:center;
 }
 
-th{
-    box-sizing: content-box;
-    border: solid 2px;
-}
-
-td{
-    box-sizing: content-box;
-    border: solid 2px;
-    
-}
 
 #container{
 padding-bottom: 40px;
@@ -48,6 +38,13 @@ flex-direction: column;
 align-items: center;
 }
 
+.initials{
+    display: flex;
+}
+.scores{
+    display: flex;
+}
+
 button {
     background-color: rgb(117, 117, 244);
     box-shadow: 10px;
@@ -60,22 +57,6 @@ button:hover {
     background-color: #ddd;
 }
 
-.start-button::after {
-    visibility: hidden;/*hide start button*/
-}
-
-#answers {
-    width: 200px;
-    padding: 10px;
-    gap: 10px;
-    display: flex;
-    flex-direction: column;
-}
-
-#start {
-    padding: 10px;
-    font-size: 20px;
-}
 
 footer {
     border-top: 1px solid blue;
