--- a/assets/score.css
+++ b/assets/score.css
@@ -7,7 +7,7 @@ header {
     height: 50px;
     padding: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     border-bottom: 1px solid blue
 }
 
@@ -38,6 +38,10 @@ flex-direction: column;
 align-items: center;
 }
 
+ul {
+    list-style-type: none;
+   }
+   
 .initials{
     display: flex;
 }
